--- a/client/templates/main.html
+++ b/client/templates/main.html
@@ -2,37 +2,32 @@
   <section class="landing">
     <!-- <div class="header"></div> -->
 
-      <div class="header_title">
-        <center>
-          <span>
-            <img src="/logo.png" class="logo">
-            <h1 style="font-size: 72px; margin: 35px 0;">IOTA </h1>
-          </span>
-          <h1 style="font-size: 44px; margin: 15px 0;">Foundation Funding Progress</h1>
-        </center>
-      </div>
-      <div class="header_btns">
-        <div class="more_btn">
-          <button class="participate">Learn More</button>
-        </div>
-      </div>
-
-    {{> steps}}
-  </section>
-  {{> addresses}}
-</template>
-
-<template name="steps">
-    <div class="funding">
-      <svg id="fillgauge6" width="100%" height="400" onclick="gauge6.update(NewValue());"></svg>
-      <div class="funded">
-        <h1 style="font-size: 62px; margin: 25px 0; color:#fff;">Current vs. Goal</h1>
-        <h1 style="font-size: 34px; margin: 35px 0; color: #fff;"><span style="margin-right: 15px;">1Ti</span> // <span style="margin-left: 15px;">139 Ti</span></h1>
+    <div class="header_title">
+      <center>
+        <span>
+          <img src="/logo.png" class="logo">
+          <h1 style="font-size: 72px; margin: 35px 0;">IOTA</h1>
+        </span>
+        <h1 style="font-size: 44px; margin: 15px 0;">Foundation Funding Progress</h1>
+      </center>
+    </div>
+    <div class="header_btns">
+      <div class="more_btn">
+        <button class="participate">Learn More</button>
       </div>
     </div>
-</template>
 
-<template name="addresses">
+    <div class="funding">
+      <svg id="fillgauge6" width="100%" height="400"></svg>
+      {{#with allAddresses}}
+        <div class="funded">
+          <h1 style="font-size: 62px; margin: 25px 0; color:#fff;">Current vs. Goal</h1>
+          <h1 style="font-size: 34px; margin: 35px 0; color: #fff;"><span style="margin-right: 15px;">{{getTotal this.addressList}} Ti</span> // <span style="margin-left: 15px;">139 Ti</span></h1>
+        </div>
+      {{/with}}
+    </div>
+  </section>
+
   <section class="addresses">
     <div class="addresses__title">
       <h1>Foundation Addresses</h1>
@@ -47,6 +42,13 @@
           </tr>
         </thead>
         <tbody>
+          <tr>
+            <td class="iota__address">
+              FROM CLAIMS
+            </td>
+            <td class="iota__amount">45862249674083</td>
+            <td class="iota__full">No</td>
+          </tr>
           {{#with allAddresses}}
             {{#each this.addressList}}
               <tr>
