--- a/client/stylesheets/main.css
+++ b/client/stylesheets/main.css
@@ -205,3 +205,7 @@ td {
   text-shadow: -1px -1px 1px rgba(0, 0, 0, 0.1);
   border-right: 1px solid #C1C3D1;
 }
+
+.popover {
+  max-width: 800px !important;
+}
