--- a/client/stylesheets/main.css
+++ b/client/stylesheets/main.css
@@ -22,10 +22,9 @@ body {
 .landing {
   width: 100%;
   min-height: 100vh;
-  background-image: -webkit-radial-gradient(top, circle cover, #6b826b, #3c643c 75%);
-  background-image: -moz-radial-gradient(top, circle cover, #6b826b, #3c643c 75%);
-  background-image: -o-radial-gradient(top, circle cover, #6b826b, #3c643c 75%);
-  background-image: radial-gradient(top, circle cover, #6b826b, #3c643c 75%);
+  background: #485563; /* fallback for old browsers */
+  background: -webkit-linear-gradient(to left, #485563 , #29323c); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to left, #485563 , #29323c); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
   overflow: hidden;
   padding: 0;
 }
